force-app/main/default/objects/PAG_Persona_Aggregation__c.object
<CustomObject>
    <fields>
        <fullName>PAG_CompositeKey__c</fullName>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Persona Aggregations</relationshipLabel>
        <relationshipName>Persona_Aggregations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAG_Context__c</fullName>
        <label>Context</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAG_EnrichmentJson__c</fullName>
        <label>Enrichment JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAG_MoID__c</fullName>
        <label>MoID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_OriginEventJson__c</fullName>
        <label>Origin Event JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAG_Origin__c</fullName>
        <label>Origin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Reason__c</fullName>
        <label>Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_RecordedAt__c</fullName>
        <label>Recorded At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAG_Sequence__c</fullName>
        <label>SoR Sequence</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_SoR__c</fullName>
        <label>System of Record</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAG_State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_SubType__c</fullName>
        <label>SubType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Persona Aggregation</label>
    <nameField>
        <label>Persona Aggregation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Persona Aggregations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>